日本語翻訳ファイルを編集してuserの情報を追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,12 @@
 ---
 ja:
   activerecord:
+    attributes:
+      user:
+        name: ユーザー名
+        email: メールアドレス
+        image: プロフィール画像
+        password: パスワード
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
